[package]
name = "quickly"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-std = { version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
image = { version = "0.24.4", features = ["webp-encoder"] }
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
tide = "0.16.0"
tide-compress = "0.10.6"
tide-tracing = "0.0.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
